--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,109 +1,57 @@
+// Bulma overrides
 .navbar {
-  background-color: $dark;
+  background: none;
+
+  .navbar-item {
+    img {
+      max-height: 6rem;
+      margin: 1rem 0;
+
+      @media screen and (max-width: 768px) {
+        max-height: 4rem;
+      }
+    }
+    &.logo-item {
+      flex-direction: column;
+    }
+  }
 }
 
 #branding {
   position: relative;
-  margin: 35px 0 20px;
+  margin: 10px 0 10px;
   color: inherit;
   text-decoration: none;
-
-  img {
-    display: block;
-  }
 }
 
 .main-navigation {
-  .menu {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
+  a {
+    font-size: 0.9375em;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.3s ease;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    color: white;
 
-    @media screen and (min-width: 641px) {
-      display: block;
+    &:after {
+      content: "/";
+      position: absolute;
+      right: 0;
+      color: rgba(255, 255, 255, 0.15);
+      font-weight: 300;
     }
-
-    a {
-      display: block;
-      position: relative;
-      padding: 45px 20px;
-      color: white;
-      font-size: 15px;
-      font-size: 0.9375em;
-      font-weight: 600;
-      text-decoration: none;
-      transition: 0.3s ease;
-
-      &:after {
-        content: "/";
-        position: absolute;
-        right: 0;
-        color: rgba(255, 255, 255, 0.15);
-        font-weight: 300;
-      }
-    }
-
-    .menu-item {
-      letter-spacing: 0.1rem;
-      text-transform: uppercase;
-      position: relative;
-      float: left;
-
-      &:after {
-        content: " ";
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-        width: 0;
-        opacity: 0;
-        border-left: 4px solid transparent;
-        border-right: 4px solid transparent;
-        border-bottom: 4px solid $primary;
-        transition: 0.3s ease;
-      }
-
-      &.current-menu-item,
-      &:hover {
-        a {
-          color: $primary;
-        }
-
-        &:after {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  .toggle-menu {
-    background: none;
-    color: $lightGrey;
-    font-size: 18px;
-    font-size: 1.125em;
-    border: none;
-    outline: none;
-    position: relative;
-    top: 40px;
-    display: none;
   }
 
   &.is-active {
-  }
-}
-
-.signature {
-  max-width: 300px;
-
-  @media (min-width: 992px) {
-    max-width: 300px;
+    background: none;
   }
 }
 
 .site-description {
   display: block;
   margin: 0.75rem 0 0 0;
+  color: $lightGrey;
 }
 
 .site-header {
