--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -10,3 +10,11 @@ h1,
 h2 {
   text-transform: uppercase;
 }
+
+.content {
+  .leading {
+    margin-bottom: 50px;
+    color: white;
+    font-size: 1.125em;
+  }
+}
