--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -57,6 +57,7 @@
 .site-header {
   .container {
     border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    padding-bottom: 1rem;
   }
 
   &.header-collapse {
