--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,3 +1,10 @@
+.site-header {
+  &.home {
+    position: absolute;
+    width: 100%;
+  }
+}
+
 .feature {
   text-align: center;
   margin-bottom: 50px;
