--- a/src/styles/components/_quote-slider.scss
+++ b/src/styles/components/_quote-slider.scss
@@ -8,6 +8,7 @@
       color: white;
       font-weight: 300;
       line-height: normal;
+      padding-bottom: 1rem;
     }
 
     cite {
@@ -23,6 +24,7 @@
   .flex-direction-nav {
     list-style: none;
     padding-left: 0;
+    padding-top: 1rem;
 
     li {
       float: left;
