Updates and add starter Gallery Photos custom cms collection type

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,6 +18,7 @@
 @import "layout/header", "layout/footer";
 
 // 5. Components
+@import "components/banner-slider";
 @import "components/discography-list";
 @import "components/event";
 @import "components/quote-slider";
