Settled on a photo gallery option for now

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,6 +22,7 @@
 @import "components/discography-list";
 @import "components/event";
 @import "components/quote-slider";
+@import "components/photo-gallery";
 @import "components/widgets";
 
 // 6. Page-specific styles
