--- a/src/styles/components/_quote-slider.scss
+++ b/src/styles/components/_quote-slider.scss
@@ -9,6 +9,12 @@
       font-weight: 300;
       line-height: normal;
       padding-bottom: 1rem;
+
+      @media (max-width: 768px) {
+        font-size: 1.25em;
+        line-height: 2rem;
+        font-style: italic;
+      }
     }
 
     cite {
