Add fishing blog to homepage

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -24,6 +24,7 @@
 @import "components/quote-slider";
 @import "components/photo-gallery";
 @import "components/widgets";
+@import "components/fishing-blog";
 
 // 6. Page-specific styles
 @import "pages/home";
