--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -42,3 +42,60 @@ body {
   font-weight: 700;
   margin-top: 0;
 }
+
+.button {
+  display: inline-block;
+  padding: 10px 30px;
+  background-color: #78a2ea;
+  border: none;
+  color: white;
+  text-decoration: none;
+  outline: none;
+  transition: 0.3s ease;
+  text-transform: uppercase;
+}
+.button:hover {
+  background-color: #a4c0f1;
+  color: #fff;
+}
+.button.primary {
+  background-color: #78a2ea;
+}
+.button.primary:hover {
+  background-color: #a4c0f1;
+}
+.button.secondary {
+  background-color: #848484;
+  color: white;
+}
+.button.secondary:hover {
+  background-color: #9e9e9e;
+}
+.button.small {
+  padding: 5px 10px;
+}
+.button.cut-corner {
+  background: linear-gradient(0deg, #78a2ea, #78a2ea) top left,
+    linear-gradient(0deg, #78a2ea, #78a2ea) top right,
+    linear-gradient(315deg, transparent 10px, #78a2ea 0) bottom right,
+    linear-gradient(0deg, #78a2ea, #78a2ea) bottom left;
+  background-size: 55% 55%;
+  background-repeat: no-repeat;
+  color: #fff;
+}
+.button.cut-corner:hover {
+  background: linear-gradient(0deg, #a4c0f1, #a4c0f1) top left,
+    linear-gradient(0deg, #a4c0f1, #a4c0f1) top right,
+    linear-gradient(315deg, transparent 10px, #a4c0f1 0) bottom right,
+    linear-gradient(0deg, #a4c0f1, #a4c0f1) bottom left;
+  background-size: 55% 55%;
+  background-repeat: no-repeat;
+}
+.button.cut-corner:active {
+  background: linear-gradient(0deg, #3674e0, #3674e0) top left,
+    linear-gradient(0deg, #3674e0, #3674e0) top right,
+    linear-gradient(315deg, transparent 10px, #3674e0 0) bottom right,
+    linear-gradient(0deg, #3674e0, #3674e0) bottom left;
+  background-size: 55% 55%;
+  background-repeat: no-repeat;
+}
