--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,36 +1,126 @@
 @charset 'UTF-8';
 
-// 1. Configuration and helpers
 @import "abstracts/vars";
-// 'abstracts/functions',
-// 'abstracts/mixins';
+@import "~bulma";
+//@import "bulma-prefers-dark/bulma-prefers-dark.sass";
 
-// 2. Vendors
-@import "vendors/bulma/_bulma.sass";
+h1 {
+  font-family: $RockSalt;
+}
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+}
 
-// 3. Base stuff
-@import "base/base",
-  // 'base/fonts',
-    "base/typography";
-// 'base/helpers';
+blockquote {
+  font-family: $RockSalt;
+  font-size: $size-4;
+  font-style: italic;
+  margin: 0.25rem 0;
+  padding: 0.35em 0 0.35em 40px;
+  position: relative;
+  //color: $dark;
 
-// 4. Layout-related sections
-@import "layout/header", "layout/footer";
+  @media only screen and (max-width: 1022px) {
+    font-size: $size-5;
+  }
+}
 
-// 5. Components
-@import "components/banner-slider";
-@import "components/discography-list";
-@import "components/event";
-@import "components/quote-slider";
-@import "components/photo-gallery";
-@import "components/widgets";
-@import "components/fishing-blog";
+blockquote:before {
+  display: block;
+  padding-left: 10px;
+  content: "\201C";
+  font-size: 80px;
+  position: absolute;
+  left: -20px;
+  top: -20px;
+}
 
-// 6. Page-specific styles
-@import "pages/home";
-@import "pages/about";
-@import "pages/music";
+blockquote cite {
+  font-family: $family-primary;
+  font-size: $size-6;
+  display: block;
+  margin-top: 5px;
+  font-style: normal;
+}
 
-// 7. Themes
-// @import
-//   'themes/default';
+blockquote cite:before {
+  content: "\2014 \2009";
+}
+
+.button {
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 1px;
+}
+
+.content {
+  blockquote {
+    background: transparent;
+    border: none;
+    //padding: inherit;
+  }
+}
+
+.hero {
+  &.has-background {
+    position: relative;
+    overflow: hidden;
+  }
+  &-background {
+    position: absolute !important;
+    object-fit: cover;
+    object-position: center center;
+    width: 100%;
+    height: 100%;
+    &.is-transparent {
+      opacity: 0.75;
+    }
+  }
+}
+
+.hero-image-bg-title {
+  font-size: 4rem;
+  padding: 0 1rem;
+
+  @media screen and (max-width: 640px) {
+    font-size: 3rem;
+  }
+}
+
+.hero-image-bg-subtitle {
+  padding: 0 1rem;
+  margin-top: 1rem;
+}
+
+.fullwidth {
+  width: 100%;
+}
+
+.navbar-item {
+  letter-spacing: 2px;
+}
+
+.press-card {
+  .card-image {
+    @media only screen and (min-width: 600px) {
+      overflow: hidden;
+      height: 185px;
+    }
+  }
+}
+
+.title {
+  letter-spacing: 3px;
+}
+
+.subtitle {
+  color: $grey;
+}
+
+.footer-signature {
+  max-width: 225px;
+}
